dev(hansbug): init the fork repository

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,11 @@
 ;addopts = -p no:doctest --xdoctest --xdoctest-style=google
 norecursedirs = .git ignore build __pycache__
 
-filterwarnings= default
+filterwarnings = default
+
+# from hansbug's other projects
+timeout = 20
+markers =
+    unittest
+    benchmark
+    ignore
